[package]
name = "gejji"
version = "0.1.0"
authors = ["Tobias Fried <friedtm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
sysinfo = "0.29.0"
clap = "2.33.3"
chrono = "0.4.24"
serde_json = "1.0.96"
# periodic="0.1.1"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
